# discord-bots

./: .gitignore  README.md
chortlster/: pyproject.toml
chortlster/chortlster/: chortlster.py
chortlster/tests/: test_chortlster.py
jessie/: pyproject.toml
jessie/jessie/: jessie.py  smarter_user.py
rusty/: Cargo.toml
rusty/src/: main.rs
