[tool.poetry]
name = "chortlster"
version = "0.1.0"
description = ""
authors = ["wkrettek <50168688+wkrettek@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.0"
discord = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
