[tool.poetry]
name = "jessie"
version = "0.1.0"
description = ""
authors = ["wkrettek <50168688+wkrettek@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.0"
discord = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
